cabal-version: 3.0
name:          Cabal-hs
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    dariankline@outlook.com
author:        Jose Jane
category:      Development
build-type:    Simple

library
    exposed-modules:
        HsCabal
        HsCabal.HIEBios
        HsCabal.HIEBios.Pretty
        HsCabal.QQ

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base ^>=4.17,
        Cabal ^>=3.8,
        Cabal-syntax ^>=3.8,
        cabal-install ^>=3.8,
        hie-bios ^>=0.11,
        filepath ^>=1.4,
        directory ^>=1.3,
        template-haskell ^>=2.19,
        containers ^>=0.6,
        yaml ^>=0.11,
        aeson ^>=2.1,
        bytestring ^>=0.11
